font and spacing correction

--- a/CSS/queries.css
+++ b/CSS/queries.css
@@ -3,7 +3,7 @@
 /**********************************/
 @media (min-width: 94em) {
   .section-hero {
-    padding: 21.2rem 40rem 14.2rem 40rem;
+    padding: 21.2rem 40rem 15.2rem 40rem;
   }
   .hero-text {
     padding: 0 18rem 2rem 18rem;
@@ -25,6 +25,10 @@
   }
   .modal-description,
   .modal-technologies {
+    font-size: 2.2rem;
+  }
+  .modal-link:link,
+  .modal-link:visited {
     font-size: 2.2rem;
   }
 }
